refactor: remove rounds
